Refactored to use a switch expression.