@@ -10,11 +10,12 @@
 
     <properties>
         <!-- Java version -->
-        <maven.compiler.source>13</maven.compiler.source>
-        <maven.compiler.target>13</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
 
         <!-- dependency versions -->
         <commons-lang.version>3.9</commons-lang.version>
+        <java.version>13</java.version>
         <jgrapht.version>1.3.1</jgrapht.version>
         <junit.version>5.5.2</junit.version>
         <slf4j.version>1.7.29</slf4j.version>
@@ -50,5 +51,19 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>${java.version}</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
